# soltrivia-contract

./: .env.example  package.json
monitoring/: alert-system.ts  rollback-system.ts
programs/question_bank/: Cargo.toml  README.md
programs/reward_distributor/: Cargo.toml  README.md
programs/reward_distributor/src/: lib.rs
programs/tournament_manager/src/: lib.rs
scripts/: configure-contracts.ts  deploy-local.ts  generate-keys.sh  verify-deployment.ts
soltrivia-frontend/: README.md  package-lock.json  package.json  tailwind.config.js
soltrivia-frontend/src/app/: globals.css  page.tsx
soltrivia-frontend/src/components/ui/: button.tsx  card.tsx
soltrivia-frontend/src/lib/: constants.ts
soltrivia-frontend/src/types/: index.ts
tests/: README.md  integration.test.ts  property-based.test.ts  question_bank.ts  reward-distributor.test.ts  reward_distributor.ts  security-audit.test.ts  tournament-manager.test.ts
triviacomb-contracts/: .gitignore  Anchor.toml  Cargo.toml  MISSION_COMPLETE.md  README.md  package-lock.json  tsconfig.json
triviacomb-contracts/monitoring/: health-check.ts
triviacomb-contracts/programs/question_bank/src/: lib.rs
triviacomb-contracts/programs/tournament_manager/: Cargo.toml
triviacomb-contracts/scripts/: README.md  deploy-devnet.ts  deploy-mainnet.ts  setup-devnet.sh
triviacomb-contracts/tests/: question-bank.test.ts
